--- a/src/app/pages/kpi-setting/component/edit-kpi-setting.component.html
+++ b/src/app/pages/kpi-setting/component/edit-kpi-setting.component.html
@@ -8,14 +8,14 @@
         <form [formGroup]="formKPI">
           <div class="ayo-top px-24" fxLayout="row" fxLayoutAlign="space-between center">
             <h3 class="font-weight-700">Edit KPI Group</h3>
-            <button
+            <button *ngIf="enableEdit"
               mat-raised-button type="button" color="primary" (click)="addKPI()">
               <mat-icon>add</mat-icon>
             </button>
           </div>
           <div class="ayo-middle pt-24" fxLayout="column">
             <mat-form-field fxLayout="row wrap" class="is-light form-primary">
-              <mat-select placeholder="Start KPS" formControlName="start_kps">
+              <mat-select placeholder="Start KPS" formControlName="start_kps" [readonly]="!enableEdit">
                 <mat-option *ngFor="let item of KPSList" [value]="item.id">{{item.kps_number}} ({{item.start_date  | date:'dd/MM/yyyy'}})
                 </mat-option>
               </mat-select>
@@ -24,7 +24,7 @@
               </mat-error>
             </mat-form-field>
             <mat-form-field fxLayout="row wrap" class="is-light form-primary">
-              <mat-select placeholder="End KPS" formControlName="end_kps">
+              <mat-select placeholder="End KPS" formControlName="end_kps" [readonly]="!enableEdit">
                 <mat-option *ngFor="let item of KPSList" [value]="item.id">{{item.kps_number}} ({{item.end_date  | date:'dd/MM/yyyy'}})
                 </mat-option>
               </mat-select>
@@ -32,6 +32,12 @@
                 End KPS harus diisi
               </mat-error>
             </mat-form-field>
+            <div fxLayout="row">
+              <h3>
+                <mat-slide-toggle [(ngModel)]="switchStatus" name="switchStatus" [readonly]="!enableEdit">
+                  Status</mat-slide-toggle>
+                </h3>
+            </div>
             <form [formGroup]="formFilter" autoComplete="off">
               <div
                 fxLayout="row wrap"
@@ -156,22 +162,23 @@
                   </div>
                   <div fxFlex="50" fxLayout="row wrap" fxLayoutAlign="end center"
                     fxLayout.lt-md="column" fxLayoutGap="10px" fxLayoutGap.lt-md="0px">
-                    <button *ngIf="i !== 0"
+                    <button *ngIf="enableEdit && i !== 0"
                       mat-raised-button color="primary" type="button"
                       (click)="moveUp(i)">
                       <mat-icon>arrow_upward</mat-icon>
                     </button>
-                    <button *ngIf="i !== (formKPI.get('kpis').value.length - 1)"
+                    <button *ngIf="enableEdit && i !== (formKPI.get('kpis').value.length - 1)"
                       mat-raised-button color="primary" type="button"
                       (click)="moveDown(i)">
                       <mat-icon>arrow_downward</mat-icon>
                     </button>
                     <button
-                      *ngIf="formKPI.get('kpis').value.length === 1 || i === (formKPI.get('kpis').value.length - 1)"
+                      *ngIf="enableEdit && formKPI.get('kpis').value.length === 1 || i === (formKPI.get('kpis').value.length - 1)"
                       mat-raised-button type="button" (click)="addKPI()">
                       <mat-icon>add</mat-icon>
                     </button>
                     <button mat-raised-button color="primary" type="button"
+                      *ngIf="enableEdit"
                       (click)="deleteKPI(i)">
                       <mat-icon>delete</mat-icon>
                     </button>
@@ -179,7 +186,7 @@
                 </div>
                 <div class="pb-8 px-24">
                   <mat-form-field fxLayout="row wrap" class="is-light form-primary">
-                    <mat-select placeholder="Kategori KPI" formControlName="category" (selectionChange)="resetKPIDetail(i)">
+                    <mat-select placeholder="Kategori KPI" formControlName="category" [readonly]="!enableEdit" (selectionChange)="resetKPIDetail(i)">
                       <mat-option *ngFor="let item of categories" [value]="item">{{item | toCapitalize}}
                       </mat-option>
                     </mat-select>
@@ -187,8 +194,9 @@
                       Kategori KPI harus diisi
                     </mat-error>
                   </mat-form-field>
-                  <mat-form-field *ngIf="kpi.get('category').value == 'brand' || kpi.get('category').value == 'trade program'" fxLayout="row wrap" class="is-light form-primary">
-                    <mat-select placeholder="Brand" formControlName="brand">
+                  <mat-form-field *ngIf="kpi.get('category').value == 'brand' || kpi.get('category').value == 'trade program'"
+                    fxLayout="row wrap" class="is-light form-primary">
+                    <mat-select placeholder="Brand" formControlName="brand"[readonly]="!enableEdit">
                       <mat-option *ngFor="let item of brands" [value]="item.code">{{ item.code }}
                       </mat-option>
                     </mat-select>
@@ -196,12 +204,13 @@
                       Brand harus diisi
                     </mat-error>
                   </mat-form-field>
-                  <mat-form-field *ngIf="kpi.get('category').value == 'brand' || kpi.get('category').value == 'trade program'" fxLayout="row wrap" class="is-light form-primary">
-                    <mat-select *ngIf="kpi.get('category').value == 'brand'" placeholder="Parameter" formControlName="parameter">
+                  <mat-form-field *ngIf="kpi.get('category').value == 'brand' || kpi.get('category').value == 'trade program'"
+                    fxLayout="row wrap" class="is-light form-primary">
+                    <mat-select *ngIf="kpi.get('category').value == 'brand'" [readonly]="!enableEdit" placeholder="Parameter" formControlName="parameter">
                       <mat-option *ngFor="let item of brand_parameters" [value]="item.parameter">{{ item.parameter }}
                       </mat-option>
                     </mat-select>
-                    <mat-select *ngIf="kpi.get('category').value == 'trade program'" placeholder="Parameter" formControlName="parameter">
+                    <mat-select *ngIf="kpi.get('category').value == 'trade program'" [readonly]="!enableEdit" placeholder="Parameter" formControlName="parameter">
                       <mat-option *ngFor="let item of trade_program_objectives" [value]="item.objective_description">{{ item.objective_description }}
                       </mat-option>
                     </mat-select>
@@ -213,7 +222,7 @@
               </div>
             </div>
             <div class="confirm btn-confirm px-24 py-48" fxLayout="row" fxLayoutGap="25px">
-              <button mat-raised-button type="button" class="confirmation-button" fxFlex="20" (click)="submit()">
+              <button mat-raised-button type="button" [disabled]="!enableEdit" class="confirmation-button" fxFlex="20" (click)="submit()">
                 SIMPAN
               </button>
             </div>
