Fix kpi group status filter

--- a/src/app/pages/kpi-setting/component/edit-kpi-setting.component.html
+++ b/src/app/pages/kpi-setting/component/edit-kpi-setting.component.html
@@ -38,7 +38,7 @@
                   Status</mat-slide-toggle>
                 </h3>
             </div>
-            <form [formGroup]="formFilter" autoComplete="off" [disabled]="!enableEdit">
+            <form [formGroup]="formFilter" autoComplete="off" *ngIf="enableEdit">
               <div
                 fxLayout="row wrap"
                 fxLayoutAlign="space-between stretch"
