Fix kpi setting status

--- a/src/app/pages/kpi-setting/component/edit-kpi-setting.component.html
+++ b/src/app/pages/kpi-setting/component/edit-kpi-setting.component.html
@@ -34,7 +34,7 @@
             </mat-form-field>
             <div fxLayout="row">
               <h3>
-                <mat-slide-toggle [(ngModel)]="switchStatus" name="switchStatus" [disabled]="!enableEdit">
+                <mat-slide-toggle formControlName="status" [disabled]="!enableEdit">
                   Status</mat-slide-toggle>
                 </h3>
             </div>
