--- a/src/app/pages/dte/coin-disburstment/index/exchange/coin-disburstment-exchange.component.html
+++ b/src/app/pages/dte/coin-disburstment/index/exchange/coin-disburstment-exchange.component.html
@@ -104,10 +104,13 @@
 <div class="p-16">
   <div fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="10px"
     fxLayoutAlign="end center" class="p-16 export">
+    <button mat-raised-button type="button" class="is-danger" (click)="exportExchange(true)">
+      <mat-icon>arrow_upward</mat-icon> Export Detail by trade program
+    </button>
     <button mat-raised-button type="button" class="is-danger" (click)="onDocUpload()">
       <mat-icon>arrow_downward</mat-icon> Import XLS
     </button>
-    <button mat-raised-button type="button" class="is-danger" (click)="exportExchange()">
+    <button mat-raised-button type="button" class="is-danger" (click)="exportExchange(false)">
       <mat-icon>arrow_upward</mat-icon> Export XLS
     </button>
   </div>
