add delete feature and fixing bugs import

--- a/src/app/pages/notification/create/custom-notification/import/import-custom-notification.component.html
+++ b/src/app/pages/notification/create/custom-notification/import/import-custom-notification.component.html
@@ -40,7 +40,7 @@
             <th nowrap>ID</th>
             <th nowrap>Target User</th>
             <th nowrap>Header Notification</th>
-            <th nowrap>Content Notification</th>\
+            <th nowrap>Content Notification</th>
             <th nowrap>Nama Halaman</th>
             <th nowrap>Isi Halaman</th>
           </tr>
