--- a/src/app/pages/notification/create/custom-notification/custom-notification-create.component.html
+++ b/src/app/pages/notification/create/custom-notification/custom-notification-create.component.html
@@ -124,7 +124,7 @@
         </ngx-datatable>
         
         <div class="confirm pt-24 pb-24" fxLayout="row" fxLayoutGap="20px">
-          <button mat-raised-button type="button" class="confirmation-button" fxFlex="20" (click)="submit()">
+          <button mat-raised-button type="button" class="confirmation-button" fxFlex="20" (click)="submit()" [disabled]="actionType == 'detail-custom'">
             SIMPAN
           </button>
         </div>
