--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="page-layout blank p-24" fusePerfectScrollbar>
 
-    <h2>Welcome to Dashboard</h2>
+    <h2 id="dashboard-title">Welcome to Dashboard</h2>
 
 </div>
