--- a/src/app/pages/device-authentication/device-authentication.component.html
+++ b/src/app/pages/device-authentication/device-authentication.component.html
@@ -20,8 +20,7 @@
             </mat-form-field>
           </div>
           <div class="login-button" fxLayout="column">
-            <button mat-raised-button aria-label="Login" type="submit" color="primary-red" [disabled]="submitting"
-              (click)="submit()">
+            <button id="btn-verifikasi" mat-raised-button aria-label="Login" type="submit" color="primary-red" [disabled]="submitting" (click)="submit()">
               <ng-container *ngIf="submitting == false">
                 Verifikasi Perangkat
               </ng-container>
