--- a/src/app/pages/dte/task-verification/index/task-verification-index.component.html
+++ b/src/app/pages/dte/task-verification/index/task-verification-index.component.html
@@ -75,7 +75,7 @@
               prop="nama_pengatur_jadwal_program" [flexGrow]="3">
               <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
                 <!-- <span class="row-name" [routerLink]="['/dte', 'schedule-trade-program', 'detail', row.id]"> -->
-                <span class="row">
+                <span [id]="'name-'+row.id" class="row">
                   {{row.nama_pengatur_jadwal_program}}
                 </span>
               </ng-template>
@@ -114,15 +114,15 @@
             <ngx-datatable-column [width]="165" [sortable]="false" name="Status" prop="status_scheduler" [flexGrow]="3">
               <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
                 <div class="name-container">
-                  <p class="status text-truncate h6 p-4 status-order mat-green-800-bg"
+                  <p [id]="'status-'+row.id" class="status text-truncate h6 p-4 status-order mat-green-800-bg"
                     style="text-transform: uppercase;" *ngIf="row.status_scheduler == 'publish'">
                     {{row.status_scheduler}}
                   </p>
-                  <p class="status text-truncate h6 p-4 status-order mat-yellow-900-bg"
+                  <p [id]="'status-'+row.id" class="status text-truncate h6 p-4 status-order mat-yellow-900-bg"
                     style="text-transform: uppercase;" *ngIf="row.status_scheduler == 'draft'">
                     {{row.status_scheduler}}
                   </p>
-                  <p class="status text-truncate h6 p-4 status-order mat-red-900-bg" style="text-transform: uppercase;"
+                  <p [id]="'status-'+row.id" class="status text-truncate h6 p-4 status-order mat-red-900-bg" style="text-transform: uppercase;"
                     *ngIf="row.status_scheduler == 'unpublish'">
                     {{row.status_scheduler}}
                   </p>
@@ -137,29 +137,29 @@
             <ngx-datatable-column [width]="250" name="Tindakan" headerClass="textright" [sortable]="false">
               <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
                 <div class="button-row" style="margin-left: -10px">
-                  <button type="button" mat-icon-button color="" matTooltip="Lihat"
+                  <button [id]="'btn-lihat-'+row.id" type="button" mat-icon-button color="" matTooltip="Lihat"
                     [routerLink]="['/dte', 'taskverification', 'detail', row.id, row.scheduler_templates_id]"
                     [disabled]="!permissionVerifikasiMisi?.lihat">
                     <mat-icon class="secondary-text">assignment</mat-icon>
                   </button>
-                  <button type="button" mat-icon-button color=""
+                  <button [id]="'btn-ubah-'+row.id" type="button" mat-icon-button color=""
                     [routerLink]="['/dte', 'taskverification', 'edit', row.id]"
                     [disabled]="row?.status_berjalan !== 'no' || !permission?.ubah"
                     matTooltip="Ubah Tanggal Penjadwalan">
                     <mat-icon class="secondary-text">update</mat-icon>
                   </button>
-                  <button type="button" mat-icon-button color="" [disabled]="row.status_scheduler !== 'publish'"
+                  <button [id]="'btn-export-'+row.id" type="button" mat-icon-button color="" [disabled]="row.status_scheduler !== 'publish'"
                     matTooltip="Export Misi" (click)="export(row)">
                     <mat-icon *ngIf="row.status_scheduler == 'publish'" class="orange-500-fg">save_alt</mat-icon>
                     <mat-icon *ngIf="row.status_scheduler !== 'publish'" class="secondary-text">save_alt</mat-icon>
                   </button>
-                  <button type="button" mat-icon-button color="" matTooltip="Verified All"
+                  <button [id]="'btn-verified-'+row.id" type="button" mat-icon-button color="" matTooltip="Verified All"
                     (click)="openConfirmDialog(row, 'Verification All Mission')"
                     [disabled]="isDisableVerification(row)">
                     <mat-icon *ngIf="!isDisableVerification(row)" class="orange-500-fg">assignment_turned_in</mat-icon>
                     <mat-icon *ngIf="isDisableVerification(row)" class="secondary-text">assignment_turned_in</mat-icon>
                   </button>
-                  <button type="button" mat-icon-button color="" matTooltip="Release Coin"
+                  <button [id]="'btn-release-'+row.id" type="button" mat-icon-button color="" matTooltip="Release Coin"
                     (click)="openConfirmDialog(row, 'Release Coin On Index')" [disabled]="isDisableReleaseCoin(row)">
                     <mat-icon *ngIf="!isDisableReleaseCoin(row)" class="orange-500-fg">call_made</mat-icon>
                     <mat-icon *ngIf="isDisableReleaseCoin(row)" class="secondary-text">call_made</mat-icon>
