--- a/src/app/pages/dte/template/index/template-index.component.html
+++ b/src/app/pages/dte/template/index/template-index.component.html
@@ -1,7 +1,7 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
   <page-content-header [contentTitle]="'Daftar Tugas'">
-    <button style="width: 170px" [routerLink]="['/dte','template-task', 'create']" mat-raised-button type="button">
+    <button id="btn-buat_tugas" style="width: 170px" [routerLink]="['/dte','template-task', 'create']" mat-raised-button type="button">
       <mat-icon>add</mat-icon> BUAT
     </button>
   </page-content-header>
@@ -62,7 +62,7 @@
         </div>
       </div>
 
-      <ngx-datatable class="material" [rows]="rows" [loadingIndicator]="loadingIndicator" [columnMode]="'force'"
+      <ngx-datatable id="datatable" class="material" [rows]="rows" [loadingIndicator]="loadingIndicator" [columnMode]="'force'"
         [offset]="offsetPagination" [headerHeight]="48" [footerHeight]="56" [rowHeight]="'auto'" [scrollbarH]="true"
         [reorderable]="reorderable" [selectionType]="'checkbox'" [count]="pagination.total"
         [limit]="pagination.per_page" [externalPaging]="true" [externalSorting]="true" (page)="setPage($event)"
