--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -60,7 +60,7 @@
             </div>
 
             <div class="login-button" fxLayout="row">
-              <button mat-raised-button aria-label="Login" type="submit" color="primary-red" [disabled]="submitting">
+              <button id="btn-masuk-login" mat-raised-button aria-label="Login" type="submit" color="primary-red" [disabled]="submitting">
                 <ng-container *ngIf="submitting == false">
                   Masuk
                 </ng-container>
