fixing error forEach

--- a/src/app/pages/dte/task-verification/index/task-verification-index.component.html
+++ b/src/app/pages/dte/task-verification/index/task-verification-index.component.html
@@ -65,7 +65,7 @@
               </div>
             </div>
           </form>
-          <ngx-datatable class="material" style="border-top: 1px solid #e3e3e3" [rows]="rows"
+          <ngx-datatable id="datatable-nontsm" class="material" style="border-top: 1px solid #e3e3e3" [rows]="rows"
             [loadingIndicator]="loadingIndicator" [columnMode]="'force'" [headerHeight]="48" [footerHeight]="56"
             [rowHeight]="auto" [scrollbarH]="true" [offset]="offsetPagination" [reorderable]="reorderable"
             [count]="pagination.total" [limit]="pagination.per_page" [externalPaging]="true" [externalSorting]="true"
