--- a/src/app/shared/confirmation-dialog/confirmation-dialog.component.html
+++ b/src/app/shared/confirmation-dialog/confirmation-dialog.component.html
@@ -16,6 +16,6 @@
       (click)="data.confirmCallback(valueRadio)">{{data.buttonText[0]}}</button>
     <button id="btn-confirm-import" *ngIf="data.isDisagree && !valueRadio" mat-button class="disable" style="cursor: no-drop;"
       [disabled]="!valueRadio">{{data.buttonText[0]}}</button>
-    <button mat-button class="reject" style="cursor: pointer;" (click)="closeDialog()">{{data.buttonText[1]}}</button>
+    <button id="btn-cancel-import" mat-button class="reject" style="cursor: pointer;" (click)="closeDialog()">{{data.buttonText[1]}}</button>
   </div>
 </div>
